<resources>
    <string name="app_name">Flower World</string>
    <string name="reciever">Получатель:</string>
    <string name="timeAndDate">Когда:</string>
    <string name="pay">Сумма:</string>
    <string name="state">Статус:</string>
    <string name="ok">ОК</string>
    <string name="enterText">Введите текст...</string>
    <string name="sendComment">Отправить</string>
    <string name="buy">Купить</string>
    <string name="shops">Магазины</string>
    <string name="sizes">Размер</string>
    <string name="compound">Состав</string>
    <string name="description">Описание</string>
    <string name="Shop">Магазин</string>
    <string name="rates">Отзывы</string>
    <string name="to_rate"><u>Оставить отзыв</u></string>
    <string name="address">Куда:</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>
    <string name="shop_adress">Адрес</string>
    <string name="delivery">Условия доставки</string>
    <string name="products">Товыры</string>
    <string name="orders">Покупки</string>
    <string name="active_orders">Активные заказы</string>
    <string name="completed_orders">Завершенные заказы</string>
    <string name="follow_products">Избранные</string>
    <string name="rated_products">Отзывы</string>
    <string name="exit">Выход</string>
    <string name="error_auth">Неверный логин или пароль</string>
    <string name="go_registration"><u>Регистрация</u></string>
    <string name="registration">Регистрация</string>
    <string name="enter_text">Введите текст</string>
    <string name="search">Поиск</string>
    <string name="cancel">Отменить</string>
    <string name="log_in">Авторизация</string>
    <string name="go_log_in"><u>Авторизация</u></string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="log_in_bt">Войти</string>
    <string name="first_name">Имя *</string>
    <string name="example_first_name">Иван</string>
    <string name="second_name">Фамилия *</string>
    <string name="example_second_name">Иванов</string>
    <string name="patr_name">Отчество</string>
    <string name="example_patr_name">Петрович</string>
    <string name="telephone">Телефон *</string>
    <string name="new_password">Новый пароль *</string>
    <string name="repeat_new_password">Повтор нового пароля *</string>
    <string name="new_email">Адрес эл. почты *</string>
    <string name="example_email">abc@example.com</string>
    <string name="create_user">Зарегистрироваться</string>
    <string name="flower_shop">Цветочный магазин</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="main_menu">Главная</string>
    <string name="search_menu">Найти</string>
    <string name="user_menu">Аккаунт</string>
    <string name="often_find">Чаще всего ищут:</string>
    <string name="about_us">О Нас</string>
    <string name="product">Товар: </string>
    <string name="order_from">Заказ от </string>
    <string name="order_state">Статус: </string>
    <string name="order_id">#</string>
    <string name="empty">Здесь пока ничего нет</string>
    <string name="version">Версия: 1.0</string>
    <string name="author_name">Автор: Юсупов М.</string>
    <string name="new_order">Новый заказ</string>
</resources>
