<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorWhite"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:id="@+id/sign_in_fragment_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:backgroundImage="@drawable/sign_in_dec_1" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/century"
            android:gravity="center_horizontal"
            android:text="@string/registration"
            android:textColor="@color/appColorWhite"
            android:textSize="35sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_fragment_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_fragment_error_message_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="9dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone"
            tools:text="Пароли должны содержать не менее восьми символов, в том числе не менее 1 буквы и 1 цифры." />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/sing_in_fragment_first_name"
            style="@style/general_enter_text"
            android:hint="@string/example_first_name"
            android:inputType="text" />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/second_name" />

        <EditText
            android:id="@+id/sing_in_fragment_second_name"
            style="@style/general_enter_text"
            android:hint="@string/example_second_name"
            android:inputType="text" />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/patr_name" />

        <EditText
            android:id="@+id/sing_in_fragment_patr_name"
            style="@style/general_enter_text"
            android:hint="@string/example_patr_name"
            android:inputType="text" />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/new_email" />

        <EditText
            android:id="@+id/sign_in_fragment_email"
            style="@style/general_enter_text"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/telephone" />

        <EditText
            android:id="@+id/sign_in_fragment_telephone"
            style="@style/general_enter_text"
            android:layout_marginHorizontal="50dp"
            android:hint="+7"
            android:inputType="phone" />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/sign_in_password"
            style="@style/general_enter_text"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPassword" />

        <TextView
            style="@style/FW_MHeadline"
            android:layout_marginStart="50dp"
            android:text="@string/repeat_new_password" />

        <EditText
            android:id="@+id/sign_in_fragment_repeat_password"
            style="@style/general_enter_text"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_fragment_error_auth_text_view"
            style="@style/Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/error_auth"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_in_fragment_add_new_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_styles"
            android:fontFamily="@font/century"
            android:paddingHorizontal="18dp"
            android:text="@string/create_user"
            android:textColor="@color/appColorWhite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/log_in"
            android:textColor="@color/grey" />
    </LinearLayout>
</RelativeLayout>