<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_rowWeight="10"
    android:background="@color/appColorWhite"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:id="@+id/welcome_fragment_top_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/dark_green"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/flower_shop"
            android:textColor="@color/text_light_grey"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/welcome_fragment_center_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:backgroundImage="@drawable/logo_shadow3" />
    </FrameLayout>

    <TextView
        android:id="@+id/welcome_fragment_welcome_text_view"
        style="@style/headline_recycle_views"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/welcome" />

    <LinearLayout
        android:id="@+id/welcome_fragment_bottom_liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/welcome_fragment_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_styles"
            android:fontFamily="@font/roboto"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/appColorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/welcome_fragment_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/test_dr"
            android:fontFamily="@font/roboto"
            android:text="@string/create_user"
            android:textAllCaps="false"
            android:textColor="@color/text_dark"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>