<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorWhite">

    <LinearLayout
        android:id="@+id/charterFragmentLinLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appColorWhite"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <include
                layout="@layout/flower_icon"
                android:gravity="center_horizontal" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Body1"
                android:layout_marginStart="10dp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/orderAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Body1"
                android:layout_marginStart="10dp"
                android:text="@string/reciever" />

            <EditText
                android:id="@+id/orderReceiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Body1"
                android:layout_marginStart="10dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/orderDate"
                style="@style/Body1"
                android:layout_marginHorizontal="10dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Body1"
                android:layout_marginStart="10dp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/orderTime"
                style="@style/Body1"
                android:layout_marginHorizontal="10dp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/orderGo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_styles"
                android:bottomRightRadius="20dp"
                android:fontFamily="@font/rubik"
                android:text="@string/buy"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
