<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorWhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/shop_fragment_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColorWhite">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/shop_fragment_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            app:contentScrim="@color/appColorWhite"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?android:actionBarSize">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/shopItemImg"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_centerHorizontal="true"
                    app:retryImageScaleType="fitXY"
                    app:roundedCornerRadius="90dp" />
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/shop_fragment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.MaterialComponents.Light"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/product_item_price"
                android:text="@string/shop_adress" />

            <TextView
                android:id="@+id/shopPageAddress"

                style="@style/product_item_title"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp" />

            <TextView
                style="@style/product_item_price"
                android:layout_marginTop="20dp"
                android:text="@string/delivery" />

            <TextView
                android:id="@+id/shopPageUslDost"
                style="@style/product_item_title"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"

                android:layout_marginTop="15dp" />

            <TextView
                style="@style/product_item_price"
                android:layout_marginTop="15dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/shopPageAnnotation"
                style="@style/product_item_title"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp" />

            <TextView
                style="@style/product_item_price"
                android:layout_marginBottom="20dp"
                android:text="@string/products" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shop_fragment_products_recycle_view" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>